Fix build issues and add local testing support
- Updated dependencies to use current versions (@babel/eslint-parser, eslint 9.x)
- Added dotenv support for local environment variable testing
- Enhanced build.js with better error handling and local .env.local support
- Updated .eslintrc.js to use new @babel/eslint-parser
- Added .env.test to .gitignore for additional environment file protection
- Build script now works correctly both locally (with .env.local) and in production
- Tested build process locally - works perfectly with proper error messages

--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode/1.5.3/qrcode.min.js"></script>
+    
+    <script>
+        // Injected environment variables for production
+        window.VITE_FIREBASE_API_KEY = "AIzaSyD0-OjpeptPX5zG1x0411nkP0cdQq5oWXc";
+        window.VITE_FIREBASE_AUTH_DOMAIN = "rail-statistics.firebaseapp.com";
+        window.VITE_FIREBASE_DATABASE_URL = "https://rail-statistics-default-rtdb.europe-west1.firebasedatabase.app";
+        window.VITE_FIREBASE_PROJECT_ID = "rail-statistics";
+        window.VITE_FIREBASE_STORAGE_BUCKET = "rail-statistics.firebasestorage.app";
+        window.VITE_FIREBASE_MESSAGING_SENDER_ID = "998967146702";
+        window.VITE_FIREBASE_APP_ID = "1:998967146702:web:3183d4e5621ddfff2ff89f";
+        window.VITE_FIREBASE_MEASUREMENT_ID = "G-GNL8ZVEW1E";
+    </script>
     <!-- Firebase SDK -->
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js';
