--- a/index.html
+++ b/index.html
@@ -230,6 +230,33 @@
             </div>
         </div>
 
+        <!-- Search Dialog Modal -->
+        <div class="modal" id="search-modal" style="display: none;">
+            <div class="modal-content search-modal-content">
+                <div class="modal-header">
+                    <h3><i class="fas fa-search"></i> Search Stations</h3>
+                    <button class="modal-close" onclick="closeModal('search-modal')">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="search-input-container">
+                        <input type="text" id="search-input" placeholder="Type station name, CRS code, or location..." 
+                               autocomplete="off" spellcheck="false">
+                        <div class="search-results-container" id="search-results-container">
+                            <div class="search-placeholder">
+                                <i class="fas fa-search"></i>
+                                <p>Start typing to search for stations...</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" onclick="closeModal('search-modal')">Cancel</button>
+                </div>
+            </div>
+        </div>
+
         <!-- Error Modal -->
         <div class="modal" id="error-modal" style="display: none;">
             <div class="modal-content">
