--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <title>Rail Statistics - Station Migration Tool</title>
-    <link rel="stylesheet" href="styles.css?v=3">
+    <link rel="stylesheet" href="styles.css?v=5">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚂</text></svg>">
 </head>
@@ -187,6 +187,10 @@
                 <div class="step-header">
                     <div class="step-number">4</div>
                     <h2>Review & Link Stations</h2>
+                </div>
+
+                <div class="matched-stations" id="matched-stations">
+                    <!-- Matched stations will be populated here -->
                 </div>
 
                 <div class="unmatched-stations" id="unmatched-stations">
@@ -409,6 +413,6 @@
             });
         }
     </script>
-    <script src="migration.js?v=6"></script>
+    <script src="migration.js?v=10"></script>
 </body>
 </html>
