Refactor HTML processing in build.js and update Content Security Policy
- Modified build.js to process multiple HTML files for environment variable injection, enhancing maintainability and scalability.
- Updated Content Security Policy in index.html, upload.html, review.html, matching.html, export.html, debug.html, and test-simplified-parser.html to allow data URIs for fonts and images, improving resource loading flexibility.
- Enhanced console logging for better visibility during the build process.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Migrate your station tracking data from CSV files to the Rail Statistics app format with advanced fuzzy matching and Firebase integration.">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;">
     <meta name="keywords" content="rail, statistics, migration, csv, station tracking, firebase">
     <meta name="author" content="Rail Statistics">
     <meta property="og:title" content="Rail Statistics - Station Migration Tool">
