--- a/matching.html
+++ b/matching.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Match your stations with the database">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;">
     <title>Station Matching - Rail Statistics Migration</title>
     <link rel="stylesheet" href="styles.css?v=7">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -107,10 +107,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/shared/firebase.js"></script>
-    <script src="js/shared/csv-parser.js"></script>
-    <script src="js/shared/storage.js"></script>
-    <script src="js/shared/matcher.js"></script>
-    <script src="js/pages/matching.js"></script>
+    <script src="js/shared/firebase.js?v=8"></script>
+    <script src="js/shared/csv-parser.js?v=8"></script>
+    <script src="js/shared/storage.js?v=8"></script>
+    <script src="js/shared/matcher.js?v=8"></script>
+    <script src="js/pages/matching.js?v=8"></script>
 </body>
 </html>
