--- a/export.html
+++ b/export.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Export your migrated station data">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;">
     <title>Export Results - Rail Statistics Migration</title>
-    <link rel="stylesheet" href="styles.css?v=7">
+    <link rel="stylesheet" href="styles.css?v=9">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚂</text></svg>">
 </head>
@@ -102,10 +105,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/shared/firebase.js"></script>
-    <script src="js/shared/csv-parser.js"></script>
-    <script src="js/shared/storage.js"></script>
-    <script src="js/shared/exporter.js"></script>
-    <script src="js/pages/export.js"></script>
+    <script src="js/shared/firebase.js?v=9"></script>
+    <script src="js/shared/csv-parser.js?v=9"></script>
+    <script src="js/shared/storage.js?v=9"></script>
+    <script src="js/shared/exporter.js?v=9"></script>
+    <script src="js/pages/export.js?v=9"></script>
 </body>
 </html>
