--- a/matching.html
+++ b/matching.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Match your stations with the database">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; script-src 'self' 'unsafe-inline' https://www.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;">
     <title>Station Matching - Rail Statistics Migration</title>
-    <link rel="stylesheet" href="styles.css?v=7">
+    <link rel="stylesheet" href="styles.css?v=9">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚂</text></svg>">
 </head>
@@ -29,8 +32,17 @@
                 </div>
 
                 <div class="matching-progress">
-                    <div class="progress-bar">
-                        <div class="progress-fill" id="progress-fill"></div>
+                    <div class="progress-container">
+                        <div class="progress-circle">
+                            <svg class="progress-ring" width="120" height="120">
+                                <circle class="progress-ring-circle" stroke="#e0e0e0" stroke-width="8" fill="transparent" r="52" cx="60" cy="60"/>
+                                <circle class="progress-ring-fill" stroke="#4CAF50" stroke-width="8" fill="transparent" r="52" cx="60" cy="60" id="progress-ring-fill"/>
+                            </svg>
+                            <div class="progress-percentage" id="progress-percentage">0%</div>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress-fill" id="progress-fill"></div>
+                        </div>
                     </div>
                     <p class="progress-text" id="progress-text">Preparing to match stations...</p>
                 </div>
@@ -107,10 +119,20 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/shared/firebase.js?v=8"></script>
-    <script src="js/shared/csv-parser.js?v=8"></script>
-    <script src="js/shared/storage.js?v=8"></script>
-    <script src="js/shared/matcher.js?v=8"></script>
-    <script src="js/pages/matching.js?v=8"></script>
+    <script src="js/shared/firebase.js?v=9"></script>
+    <script src="js/shared/csv-parser.js?v=9"></script>
+    <script src="js/shared/storage.js?v=9"></script>
+    <script src="js/shared/matcher.js?v=9"></script>
+    <script src="js/pages/matching.js?v=9"></script>
+    
+    <script>
+        function goBack() {
+            window.location.href = 'review.html';
+        }
+
+        function continueToExport() {
+            window.location.href = 'export.html';
+        }
+    </script>
 </body>
 </html>
