--- a/fbstationtest.html
+++ b/fbstationtest.html
@@ -21,13 +21,14 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 2rem;
-            padding-bottom: 1rem;
+            margin-top: var(--space-2xl);
+            margin-bottom: var(--space-2xl);
+            padding-bottom: var(--space-lg);
             border-bottom: 1px solid var(--border-color);
         }
 
         .page-title {
-            font-size: 2rem;
+            font-size: var(--text-3xl);
             font-weight: 600;
             color: var(--text-primary);
             margin: 0;
@@ -36,13 +37,14 @@
         .back-button {
             display: inline-flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: var(--space-sm);
             color: var(--text-secondary);
             text-decoration: none;
-            padding: 0.5rem 1rem;
+            padding: var(--space-sm) var(--space-lg);
             border-radius: var(--radius-md);
             transition: all 0.2s ease;
             border: 1px solid var(--border-color);
+            min-height: 44px;
         }
 
         .back-button:hover {
@@ -53,28 +55,30 @@
         .stats-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            margin-bottom: 2rem;
+            gap: var(--space-lg);
+            margin-bottom: var(--space-2xl);
         }
 
         .stat-card {
             background: var(--bg-secondary);
             border: 1px solid var(--border-color);
             border-radius: var(--radius-lg);
-            padding: 1.5rem;
+            padding: var(--space-xl);
             text-align: center;
+            box-shadow: var(--shadow-sm);
+            transition: all 0.2s ease;
         }
 
         .stat-number {
-            font-size: 2rem;
-            font-weight: 600;
+            font-size: var(--text-3xl);
+            font-weight: 700;
             color: var(--accent-color);
-            margin-bottom: 0.5rem;
+            margin-bottom: var(--space-sm);
         }
 
         .stat-label {
             color: var(--text-secondary);
-            font-size: 0.875rem;
+            font-size: var(--text-sm);
             font-weight: 500;
         }
 
@@ -82,8 +86,9 @@
             background: var(--bg-secondary);
             border: 1px solid var(--border-color);
             border-radius: var(--radius-lg);
-            padding: 1.5rem;
-            margin-bottom: 2rem;
+            padding: var(--space-xl);
+            margin-bottom: var(--space-2xl);
+            box-shadow: var(--shadow-sm);
         }
 
         .search-container {
@@ -93,13 +98,14 @@
 
         .search-input {
             width: 100%;
-            padding: 0.75rem 1rem 0.75rem 2.5rem;
+            padding: var(--space-md) var(--space-lg) var(--space-md) 2.5rem;
             border: 1px solid var(--border-color);
             border-radius: var(--radius-md);
             background: var(--bg-primary);
             color: var(--text-primary);
-            font-size: 1rem;
+            font-size: var(--text-base);
             transition: all 0.2s ease;
+            min-height: 44px;
         }
 
         .search-input:focus {
@@ -110,7 +116,7 @@
 
         .search-icon {
             position: absolute;
-            left: 0.75rem;
+            left: var(--space-md);
             top: 50%;
             transform: translateY(-50%);
             color: var(--text-muted);
@@ -157,15 +163,16 @@
         .stations-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-            gap: 1.5rem;
+            gap: var(--space-xl);
         }
 
         .station-card {
             background: var(--bg-secondary);
             border: 1px solid var(--border-color);
             border-radius: var(--radius-lg);
-            padding: 1.5rem;
+            padding: var(--space-xl);
             transition: all 0.2s ease;
+            box-shadow: var(--shadow-sm);
         }
 
         .station-card:hover {
@@ -178,11 +185,11 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
-            margin-bottom: 1rem;
+            margin-bottom: var(--space-lg);
         }
 
         .station-name {
-            font-size: 1.25rem;
+            font-size: var(--text-xl);
             font-weight: 600;
             color: var(--text-primary);
             margin: 0;
@@ -192,9 +199,9 @@
         .station-crs {
             background: var(--accent-color);
             color: white;
-            padding: 0.25rem 0.75rem;
+            padding: var(--space-xs) var(--space-md);
             border-radius: var(--radius-sm);
-            font-size: 0.875rem;
+            font-size: var(--text-sm);
             font-weight: 500;
             white-space: nowrap;
         }
@@ -202,18 +209,18 @@
         .station-details {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 0.75rem;
-            margin-bottom: 1rem;
+            gap: var(--space-md);
+            margin-bottom: var(--space-lg);
         }
 
         .detail-item {
             display: flex;
             flex-direction: column;
-            gap: 0.25rem;
+            gap: var(--space-xs);
         }
 
         .detail-label {
-            font-size: 0.75rem;
+            font-size: var(--text-xs);
             font-weight: 500;
             color: var(--text-muted);
             text-transform: uppercase;
@@ -221,7 +228,7 @@
         }
 
         .detail-value {
-            font-size: 0.875rem;
+            font-size: var(--text-sm);
             color: var(--text-primary);
             font-weight: 500;
         }
@@ -229,7 +236,7 @@
         .coordinates {
             background: var(--accent-light);
             border-radius: var(--radius-md);
-            padding: 1rem;
+            padding: var(--space-lg);
             margin-top: 1rem;
         }
 
@@ -278,96 +285,96 @@
             .page-header {
                 flex-direction: column;
                 align-items: flex-start;
-                gap: 1rem;
-                margin-bottom: 1.5rem;
+                gap: var(--space-lg);
+                margin-bottom: var(--space-xl);
             }
 
             .page-title {
-                font-size: 1.5rem;
+                font-size: var(--text-2xl);
             }
 
             .stats-grid {
                 grid-template-columns: repeat(2, 1fr);
-                gap: 0.75rem;
-                margin-bottom: 1.5rem;
+                gap: var(--space-md);
+                margin-bottom: var(--space-xl);
             }
 
             .search-section {
-                padding: 1rem;
-                margin-bottom: 1.5rem;
+                padding: var(--space-lg);
+                margin-bottom: var(--space-xl);
             }
 
             .search-input {
                 font-size: 16px; /* Prevents zoom on iOS */
-                padding: 0.875rem 1rem 0.875rem 2.5rem;
+                padding: var(--space-md) var(--space-lg) var(--space-md) 2.5rem;
             }
 
             .stations-grid {
                 grid-template-columns: 1fr;
-                gap: 1rem;
+                gap: var(--space-lg);
             }
 
             .station-card {
-                padding: 1.25rem;
+                padding: var(--space-lg);
             }
 
             .station-details {
                 grid-template-columns: 1fr;
-                gap: 0.5rem;
+                gap: var(--space-sm);
             }
 
             .detail-item {
-                gap: 0.25rem;
+                gap: var(--space-xs);
             }
 
             .detail-label {
-                font-size: 0.75rem;
+                font-size: var(--text-xs);
             }
 
             .detail-value {
-                font-size: 0.875rem;
+                font-size: var(--text-sm);
             }
         }
 
         @media (max-width: 480px) {
             .page-title {
-                font-size: 1.25rem;
+                font-size: var(--text-xl);
             }
 
             .stats-grid {
                 grid-template-columns: 1fr;
-                gap: 0.5rem;
+                gap: var(--space-sm);
             }
 
             .stat-card {
-                padding: 1rem;
+                padding: var(--space-lg);
             }
 
             .stat-number {
-                font-size: 1.5rem;
+                font-size: var(--text-2xl);
             }
 
             .stat-label {
-                font-size: 0.75rem;
+                font-size: var(--text-xs);
             }
 
             .search-section {
-                padding: 0.75rem;
+                padding: var(--space-md);
             }
 
             .search-input {
-                padding: 0.75rem 0.875rem 0.75rem 2.25rem;
+                padding: var(--space-md) var(--space-sm) var(--space-md) 2.25rem;
                 font-size: 16px;
             }
 
             .station-card {
-                padding: 1rem;
+                padding: var(--space-lg);
             }
 
             .station-header {
                 flex-direction: column;
                 align-items: flex-start;
-                gap: 0.75rem;
+                gap: var(--space-md);
             }
 
             .station-name {
