Refactor header layout and enhance mobile navigation functionality
- Updated fbstationtest.html to improve spacing consistency using CSS variables.
- Modified styles.css to implement a grid layout for the header, enhancing responsiveness and alignment of elements.
- Introduced separate mobile navigation handling in header.js, ensuring a distinct layout for mobile users.
- Enhanced mobile menu toggle functionality with improved event handling and logging for better debugging.
- Cleaned up unused styles and ensured consistent use of variables across the stylesheet for maintainability.

--- a/fbstationtest.html
+++ b/fbstationtest.html
@@ -237,7 +237,7 @@
             background: var(--accent-light);
             border-radius: var(--radius-md);
             padding: var(--space-lg);
-            margin-top: 1rem;
+            margin-top: var(--space-lg);
         }
 
         .coordinates .detail-label {
@@ -248,8 +248,8 @@
         .yearly-passengers {
             background: var(--bg-tertiary);
             border-radius: var(--radius-md);
-            padding: 1rem;
-            margin-top: 1rem;
+            padding: var(--space-lg);
+            margin-top: var(--space-lg);
         }
 
         .yearly-passengers .detail-label {
@@ -263,14 +263,14 @@
 
         .no-results {
             text-align: center;
-            padding: 3rem;
+            padding: var(--space-3xl);
             color: var(--text-secondary);
         }
 
         .no-results svg {
             width: 4rem;
             height: 4rem;
-            margin-bottom: 1rem;
+            margin-bottom: var(--space-lg);
             color: var(--text-muted);
         }
 
@@ -387,7 +387,7 @@
 
             .coordinates,
             .yearly-passengers {
-                padding: 0.75rem;
+                padding: var(--space-md);
             }
         }
 
