--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
     <meta name="apple-mobile-web-app-title" content="Rail Statistics">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Rail Statistics</title>
+    <!-- Preload fonts for faster load and better cross-browser reliability -->
+    <link rel="preload" href="/fonts/Geologica-VariableFont.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/Geologica_Cursive-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <!-- Static fallback for browsers that don't support variable fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght,CRSV@100..900,1&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚂</text></svg>">
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=1">
+    <link rel="icon" type="image/png" href="/favicon.png?v=2" sizes="512x512">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png?v=2">
 </head>
 <body>
     <div id="root"></div>
